fix - 替换废弃方法
Change-Id: Ie10f8ff93e32cd6ee17eb71e03ee11ba0039ec3e
Signed-off-by: yunsi-user <yunsi-user@win>