@@ -4,10 +4,9 @@ import javax.servlet.http.HttpServletRequest;
 import org.apache.commons.beanutils.BeanUtils;
 
 public class FillBeanUtil {
-	@SuppressWarnings("deprecation")
-	public static <T> T fillBean(HttpServletRequest request,Class<T> clazz){
+	public static <T> T fillBean(HttpServletRequest request, Class<T> clazz) {
 		try {
-			T bean = clazz.newInstance();
+			T bean = clazz.getDeclaredConstructor().newInstance();
 			BeanUtils.populate(bean, request.getParameterMap());
 			return bean;
 		} catch (Exception e) {
